backup-20260104-215536/deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "33"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"backend"},"name":"backend","namespace":"cricket-feedback"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"backend"}},"template":{"metadata":{"labels":{"app":"backend"}},"spec":{"containers":[{"env":[{"name":"NODE_ENV","value":"production"},{"name":"PORT","value":"5001"},{"name":"MONGODB_URI","value":"mongodb://admin:password123@mongodb-service:27017/cricket-feedback?authSource=admin"},{"name [...]
    creationTimestamp: "2026-01-03T21:09:08Z"
    generation: 34
    labels:
      app: backend
    name: backend
    namespace: cricket-feedback
    resourceVersion: "312734"
    uid: d79a9728-11e4-4fc4-a6d7-a9c999443f08
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: backend
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-01-04T19:15:56+05:30"
        labels:
          app: backend
      spec:
        containers:
        - env:
          - name: NODE_ENV
            value: production
          - name: PORT
            value: "5001"
          - name: MONGODB_URI
            value: mongodb://admin:password123@mongodb-service:27017/cricket-feedback?authSource=admin
          - name: WHATSAPP_PHONE_NUMBER_ID
            value: "902819506256035"
          - name: WHATSAPP_ACCESS_TOKEN
            valueFrom:
              secretKeyRef:
                key: WHATSAPP_ACCESS_TOKEN
                name: whatsapp-credentials
          - name: JWT_SECRET
            valueFrom:
              secretKeyRef:
                key: jwt-secret
                name: cricket-secrets
          - name: GOOGLE_CLIENT_ID
            valueFrom:
              secretKeyRef:
                key: google-client-id
                name: cricket-secrets
          - name: GOOGLE_CLIENT_SECRET
            valueFrom:
              secretKeyRef:
                key: google-client-secret
                name: cricket-secrets
          - name: SUPER_ADMIN_KEY
            valueFrom:
              secretKeyRef:
                key: super-admin-key
                name: cricket-secrets
          image: phx.ocir.io/axkw6whnjncs/cricket-feedback-backend:v15
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health
              port: 5001
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: backend
          ports:
          - containerPort: 5001
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health
              port: 5001
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        imagePullSecrets:
        - name: ocir-creds
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-01-03T23:11:16Z"
      lastUpdateTime: "2026-01-03T23:11:16Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-01-04T13:20:36Z"
      lastUpdateTime: "2026-01-04T13:46:07Z"
      message: ReplicaSet "backend-5b4df67896" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 34
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "21"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"frontend"},"name":"frontend","namespace":"cricket-feedback"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"frontend"}},"template":{"metadata":{"labels":{"app":"frontend"}},"spec":{"containers":[{"env":[{"name":"REACT_APP_API_URL","value":"https://129.153.86.8.sslip.io/api"},{"name":"REACT_APP_GOOGLE_CLIENT_ID","valueFrom":{"secretKeyRef":{"key":"google-client-id","name":"cricket-secrets"}}} [...]
    creationTimestamp: "2026-01-03T21:18:57Z"
    generation: 22
    labels:
      app: frontend
    name: frontend
    namespace: cricket-feedback
    resourceVersion: "318086"
    uid: bed1327b-4844-419e-874f-ca065c2831a4
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: frontend
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-01-04T19:34:46+05:30"
        labels:
          app: frontend
      spec:
        containers:
        - env:
          - name: REACT_APP_API_URL
            value: https://129.153.86.8.sslip.io/api
          - name: REACT_APP_GOOGLE_CLIENT_ID
            valueFrom:
              secretKeyRef:
                key: google-client-id
                name: cricket-secrets
          image: phx.ocir.io/axkw6whnjncs/cricket-feedback-frontend:v10
          imagePullPolicy: IfNotPresent
          name: frontend
          ports:
          - containerPort: 80
            protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        imagePullSecrets:
        - name: ocir-creds
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-01-03T22:11:38Z"
      lastUpdateTime: "2026-01-03T22:11:38Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-01-03T21:18:57Z"
      lastUpdateTime: "2026-01-04T14:04:49Z"
      message: ReplicaSet "frontend-74bf47f64b" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 22
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"mongodb"},"name":"mongodb","namespace":"cricket-feedback"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"mongodb"}},"template":{"metadata":{"labels":{"app":"mongodb"}},"spec":{"containers":[{"env":[{"name":"MONGO_INITDB_ROOT_USERNAME","value":"admin"},{"name":"MONGO_INITDB_ROOT_PASSWORD","value":"password123"},{"name":"MONGO_INITDB_DATABASE","value":"cricket-feedback"}],"image":"docker.io/l [...]
    creationTimestamp: "2026-01-03T22:22:11Z"
    generation: 1
    labels:
      app: mongodb
    name: mongodb
    namespace: cricket-feedback
    resourceVersion: "51298"
    uid: 4c39d3e0-8209-4536-914a-c1beb4957d34
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: mongodb
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: mongodb
      spec:
        containers:
        - env:
          - name: MONGO_INITDB_ROOT_USERNAME
            value: admin
          - name: MONGO_INITDB_ROOT_PASSWORD
            value: password123
          - name: MONGO_INITDB_DATABASE
            value: cricket-feedback
          image: docker.io/library/mongo:6.0
          imagePullPolicy: IfNotPresent
          name: mongodb
          ports:
          - containerPort: 27017
            protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /data/db
            name: mongodb-storage
          - mountPath: /docker-entrypoint-initdb.d
            name: mongodb-init
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc
        - configMap:
            defaultMode: 420
            name: mongodb-init
          name: mongodb-init
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-01-03T22:23:12Z"
      lastUpdateTime: "2026-01-03T22:23:12Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-01-03T22:22:11Z"
      lastUpdateTime: "2026-01-03T22:23:12Z"
      message: ReplicaSet "mongodb-64fcc7d889" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
