backup-20260104-215536/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","oci.oraclecloud.com/load-balancer-type":"lb"},"name":"cricket-feedback-ingress","namespace":"cricket-feedback"},"spec":{"rules":[{"http":{"paths":[{"backend":{"service":{"name":"backend-service","port":{"number":5001}}},"path":"/api","pathType":"Prefix"},{"backend":{"service":{"name":"frontend-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
      kubernetes.io/ingress.class: nginx
      oci.oraclecloud.com/load-balancer-type: lb
    creationTimestamp: "2026-01-03T21:32:28Z"
    generation: 1
    name: cricket-feedback-ingress
    namespace: cricket-feedback
    resourceVersion: "36625"
    uid: 0055b20f-f3bc-46bb-b98f-75ea1124d0eb
  spec:
    rules:
    - http:
        paths:
        - backend:
            service:
              name: backend-service
              port:
                number: 5001
          path: /api
          pathType: Prefix
        - backend:
            service:
              name: frontend-service
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 129.153.86.8
kind: List
metadata:
  resourceVersion: ""
